--- a/eas.json
+++ b/eas.json
@@ -7,14 +7,14 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "ios": {
-        "simulator": true
-      },
-      "android": {
-        "gradleCommand": ":app:assembleDebug"
-      },
       "env": {
         "ENVIRONMENT": "development"
+      },
+      "ios": {
+        "resourceClass": "m-medium",
+        "simulator": false,
+        "buildConfiguration": "Debug",
+        "image": "latest"
       }
     },
     "development-device": {
@@ -31,20 +31,43 @@
       }
     },
     "preview": {
+      "extends": "production",
       "distribution": "internal",
-      "android": {
-        "buildType": "apk"
+      "ios": {
+        "simulator": false,
+        "buildConfiguration": "Debug"
+      },
+      "env": {
+        "ENVIRONMENT": "preview"
       }
     },
     "production": {
       "autoIncrement": true,
+      "cache": {
+        "disabled": true
+      },
+      "ios": {
+        "resourceClass": "m-medium",
+        "buildConfiguration": "Release",
+        "simulator": false,
+        "image": "latest",
+        "credentialsSource": "remote"
+      },
       "android": {
         "buildType": "app-bundle"
+      },
+      "env": {
+        "ENVIRONMENT": "production"
       }
     }
   },
   "submit": {
     "production": {
+      "ios": {
+        "appleId": "huseyinsamsun81@icloud.com",
+        "ascAppId": "6741225072",
+        "appleTeamId": "Q2P46JTYXT"
+      },
       "android": {
         "serviceAccountKeyPath": "./pc-api-8316516754317576285-744-dd1a93c2e534.json",
         "track": "production"
