--- a/ios/MaTakvimi.xcodeproj/xcshareddata/xcschemes/MaTakvimi.xcscheme
+++ b/ios/MaTakvimi.xcodeproj/xcshareddata/xcschemes/MaTakvimi.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "matchschedule.app"
-               BlueprintName = "matchschedule"
-               ReferencedContainer = "container:matchschedule.xcodeproj">
+               BuildableName = "MaTakvimi.app"
+               BlueprintName = "MaTakvimi"
+               ReferencedContainer = "container:MaTakvimi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "matchscheduleTests.xctest"
-               BlueprintName = "matchscheduleTests"
-               ReferencedContainer = "container:matchschedule.xcodeproj">
+               BuildableName = "MaTakvimiTests.xctest"
+               BlueprintName = "MaTakvimiTests"
+               ReferencedContainer = "container:MaTakvimi.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "matchschedule.app"
-            BlueprintName = "matchschedule"
-            ReferencedContainer = "container:matchschedule.xcodeproj">
+            BuildableName = "MaTakvimi.app"
+            BlueprintName = "MaTakvimi"
+            ReferencedContainer = "container:MaTakvimi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "matchschedule.app"
-            BlueprintName = "matchschedule"
-            ReferencedContainer = "container:matchschedule.xcodeproj">
+            BuildableName = "MaTakvimi.app"
+            BlueprintName = "MaTakvimi"
+            ReferencedContainer = "container:MaTakvimi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
