--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "expo": "~52.0.25",
-    "expo-constants": "~17.0.4",
-    "expo-dev-client": "~5.0.9",
+    "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.11",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.3",
-    "expo-linking": "~7.0.4",
-    "expo-notifications": "~0.29.12",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.20",
+    "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.13",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-config": "^1.5.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-purchases": "^8.5.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-unity-ads": "^1.0.3",
